--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "satish mourya",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
     "validator": "^13.12.0"
