--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "tinder for Devs",
   "main": "index.js",
   "scripts": {
+    "start":"node src/app.js",
     "dev": "nodemon src/app.js"
   },
   "keywords": [
@@ -16,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
