--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cors": "^2.8.5",
     "cron": "^4.1.4",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "env": "^0.0.2",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
@@ -30,6 +30,7 @@
     "node-cron": "^3.0.3",
     "parser": "^0.1.4",
     "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1",
     "validator": "^13.12.0"
   }
 }
